--- a/style/style.css
+++ b/style/style.css
@@ -76,6 +76,12 @@ header {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 768px) {
+  .top_header {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .contacts a {
   color: rgb(17, 17, 17);
 }
@@ -145,7 +151,7 @@ ul {
 .descript_slider {
   margin-bottom: 32px;
 }
-button {
+.button {
   border: none;
   color: rgb(68, 68, 68);
   background-color: #fff;
@@ -155,9 +161,14 @@ button {
   font-size: 13px;
   font-family: 'Open Sans', sans-serif;
 }
-button:hover {
+.button:hover {
   background-color: rgb(48, 48, 48);
-  color: #fff;
+  color: #f2f2f2;
+}
+@media (max-width: 768px) {
+  .button {
+    margin-bottom: 32px;
+  }
 }
 .bottom a {
   background-color: rgb(48, 48, 48);
@@ -165,6 +176,9 @@ button:hover {
   transition: 0.5s all;
   font-size: 13px;
   font-family: 'Open Sans', sans-serif;
+  display: block;
+  text-align: center;
+  max-width: 276px;
 }
 .bottom a:hover {
   background-color: rgb(17, 17, 17);
@@ -201,12 +215,14 @@ button:hover {
 .tab_text h3 {
   font-size: 26px;
 }
-
+.nav {
+  justify-content: center;
+}
 @media (max-width: 768px) {
   .nav {
-    flex-wrap: wrap;
     flex-wrap: nowrap;
     overflow: auto;
+    justify-content: start;
   }
 }
 .nav-link {
@@ -369,8 +385,13 @@ button:hover {
   margin-right: 32px;
   text-align: right;
 }
+@media (max-width: 768px) {
+  .our_content_item_left {
+    max-width: none;
+  }
+}
 .our_content_item_left img {
-  width: 17%;
+  width: 46px;
   margin-bottom: 16px;
 }
 .our_content_item_right {
@@ -379,8 +400,13 @@ button:hover {
   max-width: 320px;
   margin-left: 32px;
 }
+@media (max-width: 768px) {
+  .our_content_item_right {
+    max-width: none;
+  }
+}
 .our_content_item_right img {
-  width: 17%;
+  width: 46px;
   margin-bottom: 16px;
 }
 .our_content_item_left h5 {
@@ -503,7 +529,7 @@ button:hover {
 .script_bg {
   position: absolute;
   content: '';
-  width: 50%;
+  width: 42%;
   height: 660px;
   background-color: #fff;
   z-index: 100;
@@ -513,8 +539,7 @@ button:hover {
 }
 @media (max-width: 868px) {
   .script_bg {
-    position: relative;
-    width: 100%;
+    display: none;
   }
 }
 .script_bg_contact {
@@ -527,6 +552,9 @@ button:hover {
   font-weight: 600;
   line-height: 28px;
 }
+.script_bg_contact_phone {
+  margin-bottom: 16px;
+}
 .script_bg_contact_date p {
   line-height: 28px;
 }
@@ -534,7 +562,7 @@ button:hover {
   margin-top: 32px;
 }
 .script_bg_contact_icon img {
-  width: 36px;
+  width: 32px;
   margin-left: 8px;
   margin-bottom: 8px;
   margin-top: 8px;
@@ -545,4 +573,12 @@ button:hover {
 .bootom_header a {
   background-color: #fff;
   color: #000000;
+}
+.script_bg_mobile {
+  display: none;
+}
+@media (max-width: 868px) {
+  .script_bg_mobile {
+    display: block;
+  }
 }
